Edit background image and Content container

--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
     "normalize.css": "^8.0.0",
-    "react": "^16.4.1",
+    "react": "^16.5.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
     "react-favicon": "0.0.14",
     "react-icons": "^3.0.1",
-    "react-scrollable-anchor": "^0.6.1"
+    "react-scrollable-anchor": "^0.6.1",
+    "react-scrollchor": "^6.0.0"
   }
 }
