--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-favicon": "0.0.14",
     "react-icons": "^3.0.1",
     "react-scrollable-anchor": "^0.6.1",
-    "react-scrollchor": "^6.0.0"
+    "react-scrollchor": "^6.0.0",
+    "styled-components": "^4.1.3"
   }
 }
