Added deploy to GH Pages.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://digitalapplebee.github.io/yandex-taxi-react/",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -33,6 +36,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
+    "gh-pages": "^2.0.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
