Added description. Bump react, react-dom, react-hot-loader versions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yandex-taxi-react",
-  "version": "1.2.3",
-  "description": "",
+  "version": "1.2.4",
+  "description": "Application to search for employees in Yandex.Taxi",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
@@ -25,7 +25,6 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "image-webpack-loader": "^4.6.0",
-    "react-hot-loader": "^4.7.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
@@ -36,10 +35,11 @@
     "lodash": "^4.17.14",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.2",
+    "react": "16.8.6",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.8.2",
+    "react-dom": "16.8.6",
     "react-favicon": "0.0.14",
+    "react-hot-loader": "^4.12.9",
     "react-icons": "^3.4.0",
     "react-scrollable-anchor": "^0.6.1",
     "react-scrollchor": "^6.0.0",
