--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
-    "image-webpack-loader": "^4.6.0",
+    "image-webpack-loader": "4.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
