--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "lodash": "^4.17.14",
+    "lodash.template": "^4.5.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
