--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "lint": "eslint .",
+    "format": "prettier --write \"**/*.+(js|jsx|yml|yaml|css|md)\""
   },
   "homepage": "https://digitalapplebee.github.io/yandex-taxi-react/",
   "keywords": [],
@@ -20,11 +22,17 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
+    "husky": "^3.0.9",
     "image-webpack-loader": "4.2.0",
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
@@ -45,5 +53,20 @@
     "react-scrollable-anchor": "^0.6.1",
     "react-scrollchor": "^6.0.0",
     "styled-components": "^4.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run lint && yarn run format"
+    }
+  },
+  "lint-staged": {
+    "*.+(js|jsx)": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.+(json|css|md)": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
