--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yandex-taxi-react",
-  "version": "1.2.4",
+  "version": "1.2.6",
   "description": "Application to search for employees in Yandex.Taxi",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,11 @@
     "format": "prettier --write \"src/**/*.{js,jsx,css}\""
   },
   "homepage": "https://digitalapplebee.github.io/yandex-taxi-react/",
-  "keywords": [],
+  "keywords": [
+    "yandex",
+    "taxi",
+    "react"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -40,19 +44,18 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "react": "16.8.6",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "16.8.6",
-    "react-favicon": "0.0.14",
-    "react-hot-loader": "^4.12.9",
-    "react-icons": "^3.4.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-favicon": "^0.0.17",
+    "react-hot-loader": "^4.12.15",
+    "react-icons": "^3.8.0",
     "react-scrollable-anchor": "^0.6.1",
     "react-scrollchor": "^6.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.4.0"
   },
   "husky": {
     "hooks": {
