--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
   "presets": [
-    "env",
-    "react",
-    "stage-2"
-  ]
+    "@babel/env",
+    "@babel/react",
+    "@babel/stage-2",
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "plugins": ["transform-class-properties", "transform-object-rest-spread"],
+  "test": ["jest"]
 }
