--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest",
     "build": "webpack -p",
     "lint": "eslint \"src/**/*.{js,jsx,css}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,css}\""
@@ -19,24 +19,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^2.1.0",
-    "eslint": "^5.14.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^23.0.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "husky": "^3.0.9",
     "image-webpack-loader": "4.2.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
+    "jest-dom": "^4.0.0",
+    "jest-styled-components": "^6.3.3",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
+    "react-test-renderer": "^16.11.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
