--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-icons": "^3.8.0",
     "react-scrollable-anchor": "^0.6.1",
     "react-scrollchor": "^6.0.0",
+    "serialize-javascript": "^2.1.2",
     "styled-components": "^4.4.0"
   },
   "husky": {
