--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"No test specified\" && exit 0",
     "build": "webpack -p",
-    "lint": "eslint \"src/**/*.{js,jsx,css}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,css}\""
   },
   "homepage": "https://digitalapplebee.github.io/yandex-taxi-react/",
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -43,7 +44,6 @@
     "webpack-dev-server": "^3.2.0"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.3",
     "babel-preset-env": "^1.7.0",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
